feat(package.json): moved some dependencies in dev to dep

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -51,3 +51,13 @@ h2 {
 	text-align: center;
 	min-width: 3ch;
 }
+
+body {
+	padding: 4rem 2rem;
+	width: 100%;
+	min-height: 100vh;
+	display: grid;
+	justify-content: center;
+	background: #f9fafb;
+	color: #111827;
+}
