--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ let title = 'My Astro Site';
 	<title>{title}</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="stylesheet" href={Astro.resolve('../styles/global.css')}>
-	<link rel="stylesheet" href={Astro.resolve('../styles/home.css')}>
+	<link rel="stylesheet" href="../styles/global.css">
+	<link rel="stylesheet" href="../styles/home.css">
 
 	<style>
 		header {
