--- a/src/pages/destination.astro
+++ b/src/pages/destination.astro
@@ -2,6 +2,7 @@
 // Component Imports
 import Tour from '../components/Tour.astro';
 import Navbar from '../components/Navbar.astro'
+import '../styles/global.css'
 import '../styles/main.scss'
 // You can import components from any supported Framework here!
 
@@ -22,16 +23,9 @@ let title = 'My Astro Site';
 	<title>{title}</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	
+
 </head>
 <body>
 	<Navbar></Navbar>
-	<span class="batata">Batata</span>	
-	<span>Batata</span>	
-	<div></div>
-
-	<header>
-
-	</header>
 </body>
 </html>
