--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,26 +1,27 @@
-<nav>
-    <ul id="primary-navigation" class="primary-navigation">
-        <li class="active">
-            <a href="/space-tourism/" class="link">Home
+<nav class="nav">
+    <ul id="primary-navigation" class="unordered-list">
+        <li class="list-item">
+            <a class="item-link" href="/space-tourism/">Home
                 <span aria-hidden="true">00</span>
             </a>
         </li>
 
-        <li>
-            <a href="/space-tourism/destination">Destination
+        <li class="list-item">
+            <a class="item-link" href="/space-tourism/destination">Destination
                 <span aria-hidden="true">01</span>
             </a>
         </li>
-        <li>
-            <a href="#">Crew
+        <li class="list-item">
+            <a class="item-link" href="#">Crew
                 <span aria-hidden="true">02</span>
             </a>
         </li>
-        <li>
-            <a href="#">Technology
+        <li class="list-item">
+            <a class="item-link" href="#">Technology
                 <span aria-hidden="true">03</span>
             </a>
         </li>
+      
     </ul>
 
 </nav>
