--- a/src/pages/destination.astro
+++ b/src/pages/destination.astro
@@ -1,17 +1,8 @@
 ---
 // Component Imports
-import Tour from '../components/Tour.astro';
 import Navbar from '../components/Navbar.astro'
 import '../styles/global.css'
 import '../styles/main.scss'
-// You can import components from any supported Framework here!
-
-
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
-let title = 'My Astro Site';
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
@@ -20,7 +11,7 @@ let title = 'My Astro Site';
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>{title}</title>
+	<title>Space Travel - Destination</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
