--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,6 @@
 import Navbar from '../components/Navbar.astro'
 import '../styles/main.scss'
 
-// Component Script:
-// You can write any JavaScript/TypeScript that you'd like here.
-// It will run during the build, but never in the browser.
-// All variables are available to use in the HTML template below.
-
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
 ---
@@ -15,7 +10,7 @@ import '../styles/main.scss'
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Start Your Adventure!</title>
+	<title>Start Your Adventure</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
