--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -14,12 +14,15 @@
 }
 
 .unordered-list {
+  width: 100%;
+
   display: flex;
-  gap: 4rem;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .list-item {
-  margin: 2rem;
+  margin: 2rem 0;
   list-style: none;
 }
 
@@ -27,7 +30,10 @@
   font-size: var(--fs-medium);
   text-decoration: none;
   color: var(--orange);
+
+  background-color: hsl(0, 100%, 68%);
   padding: 0.8rem;
+  border-radius: 0.5rem;
 }
 
 .item-link:hover {
@@ -35,6 +41,5 @@
   background: hsl(213, 64%, 59%);
   padding: 0.8rem;
   box-shadow: rgba(0, 0, 0, 45.9%) 2px 1px 20px 0;
-  border-radius: 0.5rem;
   transition: all 200ms ease;
 }
