feat(public & src): added new assets and pages

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,3 +1,8 @@
+<header class="header">
+<div class="logo-wrapper">
+    <img src="/public/assets/shared/logo.svg" alt="" class="logo">
+</div>
+
 <nav class="nav">
     <ul id="primary-navigation" class="unordered-list">
         <li class="list-item">
@@ -11,11 +16,13 @@
                 <span aria-hidden="true">01</span>
             </a>
         </li>
+
         <li class="list-item">
             <a class="item-link" href="#">Crew
                 <span aria-hidden="true">02</span>
             </a>
         </li>
+
         <li class="list-item">
             <a class="item-link" href="#">Technology
                 <span aria-hidden="true">03</span>
@@ -23,5 +30,5 @@
         </li>
       
     </ul>
-
 </nav>
+</header>
