--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 // @use "./animations/index" as *;
 @use "./base/index" as *;
 @use "./layout/index" as *;
-// @use "./pages/index" as *;
+@use "./pages/home" as *;
 // @use "./themes/index" as *;
 
 :root {
