--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 // Component Imports
 import Navbar from '../components/Navbar.astro'
 import '../styles/main.scss'
+import '../styles/pages/home.scss'
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
@@ -13,6 +14,9 @@ import '../styles/main.scss'
 	<title>Start Your Adventure</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
 </head>
 
 <body>
