--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,32 +2,34 @@
   --ff-bebas: "Bebas Neue", cursive;
   --ff-montserrat: "Montserrat", sans-serif;
   --ff-josefin: "Josefin Sans", sans-serif;
+  --ff-bellefair: "Bellefair", serif;
 }
 
-h1,
-h2,
-h3 {
-  color: var(--color-contrast-high);
-}
+// h1,
+// h2,
+// h3 {
+//   color: var(--color-contrast-high);
+// }
 
-h1 {
-  font-family: var(--ff-bebas);
-}
+// h1 {
+//   font-family: var(--ff-bebas);
+// }
 
-h2,
-h3 {
-  font-family: var(--ff-montserrat);
-  font-weight: 400;
-}
+// h2,
+// h3 {
+//   font-family: var(--ff-montserrat);
+//   font-weight: 400;
+// }
 
 li,
 a,
 p,
 small {
   font-size: var(--fs-400);
-  font-family: var(--ff-josefin);
+  font-family: var(--ff-bellefair);
   font-weight: 300;
-  color: var(--clr-gray-scale-90);
+  text-transform: uppercase;
+  color: white;
 }
 
 $type-scale: (
