--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -7,39 +7,56 @@
   --fs-medium: 2rem;
 }
 
-.nav {
+// * primary header
+.header {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
+.logo {
+  margin: 2rem;
+}
+
+// * primary navigation
 .unordered-list {
-  width: 100%;
-
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.list-item {
-  margin: 2rem 0;
   list-style: none;
+  gap: 1rem;
 }
 
 .item-link {
-  font-size: var(--fs-medium);
   text-decoration: none;
-  color: var(--orange);
-
-  background-color: hsl(0, 100%, 68%);
-  padding: 0.8rem;
-  border-radius: 0.5rem;
 }
 
-.item-link:hover {
-  color: hsl(0, 100%, 68%);
-  background: hsl(213, 64%, 59%);
-  padding: 0.8rem;
-  box-shadow: rgba(0, 0, 0, 45.9%) 2px 1px 20px 0;
-  transition: all 200ms ease;
-}
+// .nav {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+// .unordered-list {
+//   width: 100%;
+
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: space-evenly;
+// }
+
+// .list-item {
+//   margin: 2rem 0;
+//   list-style: none;
+// }
+
+//   background-color: hsl(0, 100%, 68%);
+//   padding: 0.8rem;
+//   border-radius: 0.5rem;
+// }
+
+// .item-link:hover {
+//   color: hsl(0, 100%, 68%);
+//   background: hsl(213, 64%, 59%);
+//   padding: 0.8rem;
+//   box-shadow: rgba(0, 0, 0, 45.9%) 2px 1px 20px 0;
+//   transition: all 200ms ease;
+// }
