feat(components): improved Navbar.astro

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,27 +6,23 @@
 <nav class="nav">
     <ul id="primary-navigation" class="unordered-list">
         <li class="list-item">
-            <a class="item-link" href="/space-tourism/">Home
-                <span aria-hidden="true">00</span>
-            </a>
+            <span aria-hidden="true">00</span>
+            <a class="item-link" href="/space-tourism/">Home</a>
         </li>
 
         <li class="list-item">
-            <a class="item-link" href="/space-tourism/destination">Destination
-                <span aria-hidden="true">01</span>
-            </a>
+            <span aria-hidden="true">01</span>
+            <a class="item-link" href="/space-tourism/destination">Destination</a>
         </li>
 
         <li class="list-item">
-            <a class="item-link" href="#">Crew
-                <span aria-hidden="true">02</span>
-            </a>
+            <span aria-hidden="true">02</span>
+            <a class="item-link" href="#">Crew</a>
         </li>
 
         <li class="list-item">
-            <a class="item-link" href="#">Technology
-                <span aria-hidden="true">03</span>
-            </a>
+            <span aria-hidden="true">03</span>
+            <a class="item-link" href="#">Technology</a>
         </li>
       
     </ul>
