feat(components): refactored navbar.astro

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,34 +1,33 @@
 <header class="header">
-<div class="logo-wrapper">
-    <img src="/public/assets/shared/logo.svg" alt="" class="logo">
-</div>
+    <div class="logo-wrapper">
+        <img src="/public/assets/shared/logo.svg" alt="" class="logo">
+    </div>
 
-<nav class="nav">
-    <ul id="primary-navigation" class="unordered-list">
-        <li class="list-item">
-            <a class="item-link" href="/space-tourism/">Home
-                <span aria-hidden="true">00</span>
-            </a>
-        </li>
+    <nav class="nav">
+        <ul id="primary-navigation" class="unordered-list">
+            <li class="list-item">
+                <a href="/space-tourism/" class="item-link">
+                    <span>00</span>
+                </a>Home
+            </li>
 
-        <li class="list-item">
-            <a class="item-link" href="/space-tourism/destination">Destination
-                <span aria-hidden="true">01</span>
-            </a>
-        </li>
+            <li class="list-item">
+                <a href="/space-tourism/destination" class="item-link">
+                    <span>01</span>
+                </a>Destination
+            </li>
 
-        <li class="list-item">
-            <a class="item-link" href="#">Crew
-                <span aria-hidden="true">02</span>
-            </a>
-        </li>
+            <li class="list-item">
+                <a href="/space-tourism/" class="item-link">
+                    <span>02</span>
+                </a>Crew
+            </li>
 
-        <li class="list-item">
-            <a class="item-link" href="#">Technology
-                <span aria-hidden="true">03</span>
-            </a>
-        </li>
-      
-    </ul>
-</nav>
+            <li class="list-item">
+                <a href="/space-tourism/" class="item-link">
+                    <span>03</span>
+                </a>Technology
+            </li>
+        </ul>
+    </nav>
 </header>
