fix(navbar.astro): fixed paths for astro

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,30 +1,30 @@
 <header class="header">
     <div class="logo-wrapper">
-        <img src="/public/assets/shared/logo.svg" alt="" class="logo">
+        <img src="/assets/shared/logo.svg" alt="" class="logo">
     </div>
       
     <nav class="nav">
         <ul id="primary-navigation" class="unordered-list">
             <li class="list-item">
-                <a href="/space-tourism/" class="item-link">
+                <a href="/" class="item-link">
                     <span>00</span>
                 </a>Home
             </li>
 
             <li class="list-item">
-                <a href="/space-tourism/destination" class="item-link">
+                <a href="/destination" class="item-link">
                     <span>01</span>
                 </a>Destination
             </li>
 
             <li class="list-item">
-                <a href="/space-tourism/" class="item-link">
+                <a href="/" class="item-link">
                     <span>02</span>
                 </a>Crew
             </li>
 
             <li class="list-item">
-                <a href="/space-tourism/" class="item-link">
+                <a href="/" class="item-link">
                     <span>03</span>
                 </a>Technology
             </li>
