feat(package.json): 21

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import '../styles/main.scss'
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Start Your Adventure</title>
+	<title>Start Your Adventure!</title>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
