--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,29 +4,21 @@
     </div>
       
     <nav class="nav">
-        <ul id="primary-navigation" class="unordered-list">
+        <ul id="primary-navigation" class="primary-navigation">
             <li class="list-item">
-                <a href="/space-tourism" class="item-link">
-                    <span>00</span>
-                </a>Home
+                <a href="/" class="item-link"><span aria-hidden="true">00</span>Home</a>
             </li>
 
             <li class="list-item">
-                <a href="/space-tourism/destination" class="item-link">
-                    <span>01</span>
-                </a>Destination
+                <a href="/destination" class="item-link"><span aria-hidden="true">01</span>Destination</a>
             </li>
 
             <li class="list-item">
-                <a href="/space-tourism/crew" class="item-link">
-                    <span>02</span>
-                </a>Crew
+                <a href="/crew" class="item-link"><span aria-hidden="true">02</span>Crew</a>
             </li>
 
             <li class="list-item">
-                <a href="/space-tourism/technology" class="item-link">
-                    <span>03</span>
-                </a>Technology
+                <a href="/technology" class="item-link"><span aria-hidden="true">03</span>Technology</a>
             </li>
         </ul>
     </nav>
