--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,32 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
+
 :root {
-  --ff-bebas: "Bebas Neue", cursive;
-  --ff-montserrat: "Montserrat", sans-serif;
-  --ff-josefin: "Josefin Sans", sans-serif;
-  --ff-bellefair: "Bellefair", serif;
+  --ff-barlow: "Barlow", sans-serif;
 }
 
-// h1,
-// h2,
-// h3 {
-//   color: var(--color-contrast-high);
-// }
-
-// h1 {
-//   font-family: var(--ff-bebas);
-// }
-
-// h2,
-// h3 {
-//   font-family: var(--ff-montserrat);
-//   font-weight: 400;
-// }
+h1,
+h2,
+h3 {
+  font-family: var(--ff-barlow);
+  font-weight: 400;
+  color: var(--color-contrast-high);
+}
 
 li,
 a,
 p,
 small {
-  font-size: var(--fs-400);
-  font-family: var(--ff-bellefair);
+  font-family: var(--ff-barlow);
   font-weight: 300;
   text-transform: uppercase;
   color: white;
