Co-authored-by: Giovanni-13 <Giovanni-13@users.noreply.github.com> Co-authored-by: Wendelf Galvão <WendelfLimaDev@users.noreply.github.com>

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,6 @@
     <header class="header">
     <div class="logo-wrapper">
-        <img src="/assets/shared/logo.svg" alt="" class="logo">
+        <img src="/assets/shared/logo.svg" alt="logo" class="logo">
     </div>
       
     <button class="mobile-nav-toggle"aria-controls="primary-navigation" aria-expanded="false">
